--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "poi-lib-battle",
   "version": "0.0.1",
   "description": "Battle module for poi",
-  "main": "index.js",
+  "main": "index",
   "dependencies": {},
   "devDependencies": {
     "babel-eslint": "^6.0.4",
