--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poi-lib-battle",
-  "version": "2.3.0",
+  "version": "2.4.0-beta.0",
   "description": "Battle module for poi",
   "main": "index",
   "dependencies": {},
