--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "babel-eslint": "^6.0.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2017-node7": "^0.5.2",
-    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^2.12.0",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-react": "^5.1.1"
+    "eslint-plugin-import": "^1.8.1"
   },
   "scripts": {
     "postpublish": "cnpm sync poi-lib-battle"
